[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adtool"
version = "0.1.1"
description = "Libraries needed to run the autodisc-server computational container."
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "Jesse Lin", email = "jesse.lin@inria.fr" },
    { name = "Zacharie Bugaud", email = "zacharie.bugaud@inria.fr" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "addict==2.4.0",
    "filetype==1.2.0",
    "graphviz==0.20.1",
    "imageio==2.34.0",
    "imageio-ffmpeg==0.4.9",
    "matplotlib>=3.8",
    "mergedeep==1.3.4",
    "neat-python==0.92",
    "numpy>=1.26",
    "pexpect>=4.8.0",
    "pillow==10.2.0",
    "requests>=2",
    "sqlalchemy>=2.0",
    "tinydb==4.8.0",
    "toml>=0.10.2",
    #"torch>=1.7.1",
    "urllib3==2.2.1",
    "watchdog>=4.0.0",
    "annotated-types==0.6.0",
    "pydantic==2.7.1",
    "moviepy==1.0.3",
    "ipython==8.24.0",
]

[project.optional-dependencies]
examples = [
    "transformers",
    "diffusers",
    "accelerate",
    "torch>=1.7.1",
    "scipy"
]
visu = [
    "websockets",
    "watchfiles",
    "scikit-learn",
    "opencv-python",
    "fastapi[standard]",
    "umap-learn"
]
docking = [
    "rdkit",
    "selenium",
    "webdriver_manager",
    "imageio",
    "crem"
]
wphysics = [
    "pygraphviz",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adtool*", "examples*"]
exclude = ["build*", "discoveries*", "docs*", "tests*"]
namespaces = true


[tool.setuptools.package-dir]
adtool = "adtool"
"adtool.examples" = "examples"
